fix tweeter followers count and button alignment for chrome

--- a/views/stylesheets/screen.scss
+++ b/views/stylesheets/screen.scss
@@ -327,9 +327,9 @@ aside {
       }
 
       input[type='submit']{
-        margin: 10px 10px 0 -23px;
+        margin: -32px 13px 0 -2px;
         padding: 9px 10px;
-        position: absolute;
+        position: relative;
 
         &:hover {
           @include box-shadow(-1px 1px 2px rgba(0, 0, 0, 0.7));
